initial bird data wrangling (clean Snow_cover column to numeric between 0 - 100)

--- a/data-cleaning_empty.qmd
+++ b/data-cleaning_empty.qmd
@@ -33,17 +33,27 @@ snowsurvey_csv <- read_csv(file.path(datadir_raw, snowsurvey_file))
 glimpse(snowsurvey_csv)
 
 ```
+- all of these are characters not numeric
 
 Ok, the types are not what we were expecting for the percentages of cover. Let's find out why:
 
 ```{r}
+snowsurvey_csv %>%
+  count(Snow_cover)
 
+
+# snow cover column we have whole numbers and then decimals 
 ```
 
 Let's focus on the non-numeric values as a starting point:
+- lots of values focus on thsoe that are not numeric 
 
 ```{r}
+snowsurvey_csv %>%
+  count(Snow_cover) %>%
+  filter(is.na(as.numeric(Snow_cover)))
 
+# 3 n/a, 1 less than 1 
 ```
 
 ### Data cleaning
@@ -51,12 +61,25 @@ Let's focus on the non-numeric values as a starting point:
 Ok, we found our problematic values that are not numeric. There are a non-negligible number of cells with a dot as value. There is no mention of using this symbol in the metadata. We should probably have a look at those rows:
 
 ```{r}
+# a . i snow there for every cover that we have 
+
+snowsurvey_csv %>%
+  filter(Snow_cover == ".") %>%
+  View() 
+
+# returning these to NA might be the best idea 
+# gsub or case_whern 
+
 
 ```
 
 Interestingly, when there is a "dot" for snow cover, it is also the case for all the other covers. Let's replace them all with NA since there is no supplemental information in the provided metadata
 
 ```{r}
+snow_survery_fixed <- snowsurvey_csv %>%
+  #filter(Snow_cover == ".") %>% # filter is good to see whats actually occuring in the datast before applying it 
+  mutate(Snow_cover = ifelse(Snow_cover==".", NA, Snow_cover)) 
+
 
 ```
 
@@ -65,54 +88,83 @@ We will now tackle the other problematic values:
 The problem is similar with "-", let's set it to NA
 
 ```{r}
+# Na
+snowsurvey_fixed <-snow_survery_fixed %>% 
+  #filter(Snow_cover = "-") %>%
+    mutate(Snow_cover = ifelse(Snow_cover==".", NA, Snow_cover)) 
+  
+
 
 ```
 
 "n/a" is pretty clear regarding how to fix it:
 
 ```{r}
-
+snowsurvey_fixed <-snow_survery_fixed %>% 
+  #filter(Snow_cover = "n/a") %>%
+    mutate(Snow_cover = ifelse(Snow_cover=="n/a", NA, Snow_cover)) 
 ```
 
 "unk" is probably an abbreviation for unknown:
 
 ```{r}
-
+snowsurvey_fixed <-snow_survery_fixed %>% 
+  #filter(Snow_cover = "unk) %>%
+    mutate(Snow_cover = ifelse(Snow_cover=="unk", NA, Snow_cover)) 
 ```
 
 Finally we will set "<1" as zero (quite arbitrary indeed):
 
 ```{r}
-
+snowsurvey_fixed <-snow_survery_fixed %>% 
+  #filter(Snow_cover = "<1") %>%
+    mutate(Snow_cover = ifelse(Snow_cover=="<1", "0", Snow_cover)) #working with character so coerce with 0  
 ```
 
 Now we can test if we now only have NAs as non numeric values in the column:
 
 ```{r}
 
+snowsurvey_fixed %>%
+  count(Snow_cover) %>%
+  filter(is.na(as.numeric(Snow_cover)))  
+
 ```
 
 Ok, we can do the transformation:
 
 ```{r}
+snowsurvey_fixed <- snowsurvey_fixed %>%
+  mutate(Snow_cover = as.numeric(Snow_cover))
 
+glimpse(snowsurvey_fixed)
+
+# now we have a number for snow_cover 
 ```
 
 Yeah we have finally a numeric column 🎉. Now we can verify that all the values are between 0 and 100:
 
 ```{r}
- 
+snowsurvey_fixed %>%
+  filter(Snow_cover > 100)
+
 ```
 
 We have two values above 100, with an interesting 470%! ☃️ We should probably set those values to NAs:
 
-```{r}
+- data cleaning is opinionated no right or wrong answer 
+- 100 and 0 land cover is strange what does this mean? 
 
+```{r}
+snowsurvey_fixed <- snowsurvey_fixed %>%
+  mutate(Snow_cover = ifelse(Snow_cover > 100, NA, Snow_cover))
 ```
 
 Let's check for negative values:
 
 ```{r}
+snowsurvey_fixed %>%
+  filter(Snow_cover < 0)
 
 ```
 
@@ -134,6 +186,8 @@ write_csv(snowsurvey_fixed, file.path(datadir_processed, "snow_cover.csv"))
 Import the species csv files with the bird species information:
 
 ```{r}
+
+
 
 ```
 
