--- a/data-cleaning_empty.qmd
+++ b/data-cleaning_empty.qmd
@@ -186,9 +186,13 @@ write_csv(snowsurvey_fixed, file.path(datadir_processed, "snow_cover.csv"))
 Import the species csv files with the bird species information:
 
 ```{r}
+species_csv <- read_csv(file.path(datadir_raw,
+                                      species_file))
+glimpse(species_csv)
 
-
-
+# every observation is related a report 
+# every species has a column / observation 
+# we havbe lots of info due to contruction of table 
 ```
 
 This data set is stored in a wide format where each specie has its own column. This means that every time we discover a new species we will have to add a column. In addition, a bunch of `0` are stored in this table but do not really provide any information. According to the metadata:
@@ -197,35 +201,47 @@ This data set is stored in a wide format where each specie has its own column. T
 The number of individuals seen is recorded for each species, except when individuals were not counted but the species was present (typically for very abundant species), an "X" is shown. The remaining columns list the full-name of species (birds and mammals) recorded for at least study site in at least one year.
 ```
 
-This data model is not convenient for a database, we will have to switch to a long format.
+- This data model is not convenient for a database, we will have to switch to a long format.
+- 
 
+- make dataset longer (pivot_longer)
 
 ### Data cleaning
 
 ```{r}
+# 300 something columns of species so exlude the ones you would not want 
+species_long <- species_csv %>%
+  pivot_longer(
+   cols = !c(Year, Site, Date, Jdate, Num_observers, All_obs_reported, Observer_hours),
+   names_to = "species",
+   values_to = "species_count",
+   values_transform = list(species_count = as.character)
 
-```
-
-
-```{r}
-
+ ) # telling R not to collapse into one coolumn, should stay in own column 
 ```
 
 We want to focus on the presence and absence of species and not the count. Let's create a new column for presence where anything else than 0 is considered present
 
 ```{r}
+species_presence <- species_long %>%
+  mutate(species_presence = ifelse(species_count == "0", 0, 1))
 
 ```
 
 We can remove some columns: "Num_observers", "All_obs_reported", "Observer_hours" are here to help to compute the effort of observation but since we just want presence and absence, we do not need it. We can also remove all the zeros values to reduce the size of our data set:
 
 ```{r}
-
+species_presence <- species_presence %>%
+  select(-c(Num_observers, All_obs_reported, Observer_hours)) 
+  
 ```
 
 Last but not least, let's have a look at our species list
 
 ```{r}
+species_presence %>%
+  filter(species_presence == 1) %>%
+  count(species)
 
 ```
 
@@ -235,6 +251,8 @@ Let's write the presence table to a csv file:
 
 ```{r}
 write_csv(species_presence, file.path(datadir_processed, "species_presence.csv"))
+
+
 ```
 
 
